[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f10.png" type="Texture" id=1]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f11.png" type="Texture" id=2]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f12.png" type="Texture" id=3]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f13.png" type="Texture" id=4]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f8.png" type="Texture" id=5]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f5.png" type="Texture" id=6]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f6.png" type="Texture" id=7]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f7.png" type="Texture" id=8]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f9.png" type="Texture" id=9]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f4.png" type="Texture" id=10]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f0.png" type="Texture" id=11]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f2.png" type="Texture" id=12]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f3.png" type="Texture" id=13]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_anim_opening_f1.png" type="Texture" id=14]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_fullyopen.png" type="Texture" id=15]
[ext_resource path="res://assets/v1.1 dungeon crawler 16X16 pixel pack/tiles/wall/door_closed.png" type="Texture" id=16]
[ext_resource path="res://Door.gd" type="Script" id=17]
[ext_resource path="res://assets/Sound Effects/Crunch.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 15 ) ],
"loop": true,
"name": "opening",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 11.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 21.5 )

[node name="Door" type="StaticBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "open"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.5 )
shape = SubResource( 2 )

[node name="NearDoor" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearDoor"]
position = Vector2( 0, 2.5 )
shape = SubResource( 3 )

[node name="doorOpening" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )

[connection signal="body_entered" from="NearDoor" to="." method="_on_NearDoor_body_entered" flags=6]
[connection signal="body_exited" from="NearDoor" to="." method="_on_NearDoor_body_exited" flags=6]
